--- a/_sass/_application.scss
+++ b/_sass/_application.scss
@@ -143,7 +143,7 @@ p {
     display: block;
     svg {
       display: block;
-      height: 30px;
+      height: 50px; //30px
       margin-top: 17px;
     }
     &:hover {
